Some module related fixes